fix footer overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,7 +269,8 @@ nav ul a {
 .post-item-main {
 	margin-top: 5px;
     margin-bottom: 30px;
-    height: 195px !important;
+	height: 195px !important;
+	overflow:hidden;
 }
 
 .post-item-main > a {
